--- a/GitHubDeploymentTest/Pages/Weather.razor
+++ b/GitHubDeploymentTest/Pages/Weather.razor
@@ -7,6 +7,8 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
+<p>tHIS IS THE FIRST DEPLOYMENT WORKFLOW TEST</p>
+
 @if (forecasts == null)
 {
     <p><em>Loading...</em></p>
