--- a/GitHubDeploymentTest/Pages/Weather.razor
+++ b/GitHubDeploymentTest/Pages/Weather.razor
@@ -7,7 +7,7 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<p>THIS IS THE EIGHTH DEPLOYMENT WORKFLOW TEST</p>
+<p>THIS IS THE NINTH DEPLOYMENT WORKFLOW TEST</p>
 
 @if (forecasts == null)
 {
@@ -43,7 +43,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data./weather.json");
+        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("./sample-data./weather.json");
     }
 
     public class WeatherForecast
