Add Syncfusion Grid

--- a/GitHubDeploymentTest/_Imports.razor
+++ b/GitHubDeploymentTest/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using GitHubDeploymentTest
 @using GitHubDeploymentTest.Layout
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Data
+@using System.Collections
+@using Syncfusion.Blazor
