--- a/GitHubDeploymentTest/Pages/Weather.razor
+++ b/GitHubDeploymentTest/Pages/Weather.razor
@@ -1,4 +1,5 @@
 ﻿@page "/weather"
+@using Syncfusion.Blazor.Grids
 @inject HttpClient Http
 
 <PageTitle>Weather</PageTitle>
@@ -7,9 +8,8 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<p>THIS IS THE TENTH DEPLOYMENT WORKFLOW TEST</p>
 
-@if (forecasts == null)
+@* @if (forecasts == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -35,25 +35,80 @@ else
                 </tr>
             }
         </tbody>
-    </table>
+    </table> 	
+
 }
+ *@
 
-@code {
-    private WeatherForecast[]? forecasts;
+<div id="ControlRegion">
+    <SfGrid ID="Grid2" DataSource="@Orders" @ref="DataGrid"  Height="auto" Width="900">  
+        <GridColumns>
+            <GridColumn Field=@nameof(Order.OrderID) HeaderText="Order ID" IsPrimaryKey="true" ValidationRules="@(new ValidationRules { Required = true })" TextAlign="Syncfusion.Blazor.Grids.TextAlign.Right" Width="120"></GridColumn>
+            <GridColumn Field=@nameof(Order.CustomerID) HeaderText="Customer Name" ValidationRules="@(new ValidationRules { Required = true })" Width="120"></GridColumn>
+            <GridColumn Field=@nameof(Order.OrderDate) HeaderText=" Order Date" EditType="EditType.DatePickerEdit" Format="d" TextAlign="Syncfusion.Blazor.Grids.TextAlign.Right" Width="130" Type="Syncfusion.Blazor.Grids.ColumnType.Date"></GridColumn>
+            <GridColumn Field=@nameof(Order.Freight) HeaderText="Freight" Format="C2" TextAlign="Syncfusion.Blazor.Grids.TextAlign.Right" EditType="EditType.NumericEdit" Width="120"></GridColumn>
+            <GridColumn Field=@nameof(Order.ShipCountry) HeaderText="Ship Country" EditType="EditType.DropDownEdit" Width="150"></GridColumn>
+        </GridColumns>
+    </SfGrid>
+</div>
 
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+<style>
+    .ulstyle {
+        margin: 0px;
+        padding-left: 20px;
+        display: inline-block;
     }
 
-    public class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    .list {
+        float: left;
+        line-height: 20px;
+        margin: 10px;
+        min-width: 200px;
     }
+</style>
+
+@code{
+
+    public List<Order>? Orders { get; set; }
+    SfGrid<Order>? DataGrid;
+    protected override void OnInitialized()
+    {
+      Orders = Enumerable.Range(1, 75).Select(x => new Order()
+      {
+        OrderID = 1000 + x,
+        CustomerID = (new string[] { "ALFKI", "ANANTR", "ANTON", "BLONP", "BOLID" })[new Random().Next(5)],
+        Freight = 2.1 * x,
+        OrderDate = DateTime.Now.AddDays(-x),
+        ShipCountry = (new string[] { "USA", "UK", "CHINA", "RUSSIA", "INDIA" })[new Random().Next(5)]
+        }).ToList();
+      }
+    public void GridToolbarClick(Syncfusion.Blazor.Navigations.ClickEventArgs args)
+    {
+    }
+    public class Order
+    {
+      public int? OrderID { get; set; }
+      public string? CustomerID { get; set; }
+      public DateTime? OrderDate { get; set; }
+      public double? Freight { get; set; }
+      public string? ShipCountry { get; set; }
+    }
+    
+    // private WeatherForecast[]? forecasts;
+
+    // protected override async Task OnInitializedAsync()
+    // {
+    //     forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+    // }
+
+    // public class WeatherForecast
+    // {
+    //     public DateOnly Date { get; set; }
+
+    //     public int TemperatureC { get; set; }
+
+    //     public string? Summary { get; set; }
+
+    //     public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    // }
 }
